# cr8s-fe

./: Cargo.toml  README.md  index.html
src/: main.rs
src/api/: .mod.rs.~undo-tree~  .users.rs.~undo-tree~  mod.rs  users.rs  users.rs~
src/components/: .alert.ts.~undo-tree~  .alerts.rs.~undo-tree~  .login_form.rs.~undo-tree~  .mod.rs.~undo-tree~  alerts.rs  input.rs  input.rs~  login_form.rs  login_form.rs~  mod.rs
src/pages/: login.rs  login.rs~
