[package]
name = "cr8s-fe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-sys = { version = "0.3.64", features = ["HtmlInputElement"] }
yew = {version = "0.20", features = ["csr"]}
yew-router = {version = "0.17"}
gloo-console = "0.2"
gloo-net = "0.2"
serde = "1.0"
serde_json = "1.0"